2003-05-14  Not Zed  <NotZed@Ximian.com>

	** See bug #42540
	
	* camel-service.c (camel_gethostbyname): pre-initialise the error
	return to invalid, so if we cancel, we definetly get a bad result.
	Also, for a valid return against result, not herr.
	(camel_gethostbyaddr): Likewise.

2003-05-13  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/imap/camel-imap-utils.c (imap_uid_array_to_set): Added
	a note to the comment block for this function noting that uids
	MUST be in sorted order.

	* providers/imap/camel-imap-folder.c (imap_expunge_uids_online):
	Sort the uids before splitting them into UID set chunks. The code
	that splits the uid array into sets expects the uids to be in
	sorted order. Fixes bug #42854.

	* providers/imap/camel-imap-command.c (imap_command_start):
	Re-enable camel_verbose_debug logging.

2003-05-12  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/smtp/camel-smtp-transport.c (smtp_helo): If
	host->h_name is NULL or an empty string, default back to using the
	IP address rather than the hostname in the EHLO command.

2003-05-13  Ettore Perazzoli  <ettore@ximian.com>

	* providers/imap/camel-imap-folder.c (d): Disable debugging.

	* providers/imap/camel-imap-command.c (d): Disable debugging.

	* providers/imap/camel-imap-search.c (d): Disable debugging.

2003-05-02  Dan Winship  <danw@ximian.com>

	* camel-mime-part-utils.c
	(simple_data_wrapper_construct_from_parser): Don't call
	g_utf8_validate on an empty message. Fixes a warning.

2003-05-01  Jeffrey Stedfast  <fejj@ximian.com>

	Workaround for POS mailers like the one in bug #42045.

	* camel-mime-utils.c (header_decode_date): Make sure the numeric
	timezone is between -1200 and 1200, otherwise it is invalid.

	* broken-date-parser.c (get_tzone): Make sure the numeric timezone
	is between -1200 and 1200, otherwise it is invalid.

2003-04-29  Dan Winship  <danw@ximian.com>

	* Makefile.am (camel_lock_helper_SOURCES): Remove camel-lock.c